--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.16.3) UNRELEASED; urgency=low
+dpkg (1.14.16.3) unstable; urgency=low
 
   [ Raphael Hertzog ]
   * Remove the ":utf8" layer that utf8-encodes already valid utf8.
@@ -15,7 +15,7 @@ dpkg (1.14.16.3) UNRELEASED; urgency=low
     not worked properly for a long time (maybe never), but came to light
     due to #460903's fix. Closes: #462104
 
- -- Raphael Hertzog <hertzog@debian.org>  Tue, 22 Jan 2008 18:15:42 +0100
+ -- Guillem Jover <guillem@debian.org>  Tue, 22 Jan 2008 23:39:59 +0200
 
 dpkg (1.14.16.2) unstable; urgency=low
 
