--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-01-23  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Release 1.14.16.4.
+
+2008-01-23  Guillem Jover  <guillem@debian.org>
+
 	* scripts/Dpkg/Cdata.pm: Import capit from Dpkg::Fields.
 
 2008-01-22  Guillem Jover  <guillem@debian.org>
