--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-01-24  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Shlibs/SymbolFile.pm (load): Remove the loaded file
+	from the %$seen hash at the end so that it's possible to include
+	multiple times the same file (at the same level and not from any
+	nested file obviously).
+
 2008-01-23  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Release 1.14.16.4.
