--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+dpkg (1.14.16.5) UNRELEASED; urgency=low
+
+  * Fix dpkg-gensymbols handling of #include so that one can include multiple
+    times the same file and have it properly taken into account.
+
+ -- Raphael Hertzog <hertzog@debian.org>  Thu, 24 Jan 2008 11:27:05 +0100
+
 dpkg (1.14.16.4) unstable; urgency=low
 
   * Import capit in Dpkg::Cdata from Dpkg::Fields. Closes: #462172
