Dpkg::Shlibs::SymbolFile: add many armel-specific symbols to the blacklist

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,9 @@
 	multiple times the same file (at the same level and not from any
 	nested file obviously).
 
+	* scripts/Dpkg/Shlibs/SymbolFile.pm: Blacklist many armel specific
+	symbols.
+
 2008-01-23  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Release 1.14.16.4.
