--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-01-24  Raphael Hertzog  <hertzog@debian.org>
 
+	* configure.ac: Release 1.14.16.5.
+
+2008-01-24  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/Dpkg/Shlibs/SymbolFile.pm (load): Remove the loaded file
 	from the %$seen hash at the end so that it's possible to include
 	multiple times the same file (at the same level and not from any
