s-s-d: Use system timersub and fix timeval normalization in multiplication
Closes: #462225

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-01-25  Andreas Påhlsson  <andreas.pahlsson@xcerion.com>
+
+	* utils/start-stop-daemon.c (tsub): Remove function.
+	(tmul): Fix normalization.
+	(run_stop_schedule): Use timersub instead of tsub.
+
 2008-01-24  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/dpkg-genchanges.pl: Warn if the current version is
