--- a/THANKS
+++ b/THANKS
@@ -6,6 +6,7 @@ Alberto Garcia <berto@gpul.org>
 Anand Kumria <wildfire@progsoc.org>
 Andreas Barth <aba@not.so.argh.org>
 Andreas Metzler <ametzler@debian.org>
+Andreas Påhlsson <andreas.pahlsson@xcerion.com>
 Andrew Ferrier <andrew@new-destiny.co.uk>
 Andrew Hobson <ahobson@eng.mindspring.net>
 Andrew Suffield <asuffield@debian.org>
