--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ dpkg (1.14.17) UNRELEASED; urgency=low
   * Add new keybinding in dselect to restore all selections back to
     whatever's currently installed. Closes: #151540
     Thanks to Colin Watson.
+  * Use system timersub and fix timeval normalization in multiplication in
+    start-stop-daemon. Thanks to Andreas Påhlsson. Closes: #462225
 
   [ Raphael Hertzog ]
   * Add a warning displayed by dpkg-genchanges if the current version is
