--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-25  Piarres Beobide  <pi@beobide.net>
+
+	* eu.po: 286t
+
 2008-01-07  Guillem Jover  <guillem@debian.org>
 
 	* dselect.pot: Regenerated.
