--- a/dselect/po/eu.po
+++ b/dselect/po/eu.po
@@ -1,20 +1,20 @@
-# translation of eu.po to librezale.org
-# Copyright (C) 2004, 2005, 2006 Free Software Foundation, Inc.
+# translation of eu.po to Euskara
+# Copyright (C) 2004, 2005, 2006, 2008 Free Software Foundation, Inc.
 #
 # Jordi Blasi <valpur@euskalnet.net>, 2004.
-# Piarres Beobide <pi@beobide.net>, 2004, 2005, 2006.
+# Piarres Beobide <pi@beobide.net>, 2004, 2005, 2006, 2008.
 msgid ""
 msgstr ""
 "Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-01-07 11:58+0200\n"
-"PO-Revision-Date: 2006-02-17 08:56+0200\n"
+"PO-Revision-Date: 2008-01-24 13:36+0100\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
-"Language-Team: librezale.org <librezale@librezale.org>\n"
+"Language-Team: Euskara <Librezale@librezale.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.2\n"
+"X-Generator: KBabel 1.11.4\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #: dselect/basecmds.cc:121
@@ -141,9 +141,8 @@ msgstr ""
 "\n"
 
 #: dselect/baselist.cc:260
-#, fuzzy
 msgid "Keybindings"
-msgstr "laster-teklak"
+msgstr "Laster-teklak"
 
 #: dselect/baselist.cc:308
 #, c-format
@@ -302,7 +301,6 @@ msgid "Keystrokes"
 msgstr "Tekla-sakatzeak"
 
 #: dselect/helpmsgs.cc:25
-#, fuzzy
 msgid ""
 "Motion keys: Next/Previous, Top/End, Up/Down, Backwards/Forwards:\n"
 "  j, Down-arrow         k, Up-arrow             move highlight\n"
@@ -346,8 +344,8 @@ msgstr ""
 "                                                    karaktere bat\n"
 "\n"
 "Markatu paketeak geroago prozesatzeko:\n"
-" +, Txert  instalatu edo bertsio-berritu    =, H  atxiki uneko egoeran\n"
-" -, Ezab   kendu                            :, G  desatxiki: bertsio-"
+" +, Txert  instalatu edo bertsio-berritu    =, H  hizoztu uneko egoeran\n"
+" -, Ezab   kendu                            :, G  deshizoztu: bertsio-"
 "berritu\n"
 "                                                   edo utzi instalatu gabe\n"
 " _         kendu eta purgatu konfigurazioa\n"
@@ -703,7 +701,6 @@ msgid "Keystrokes for method selection"
 msgstr "Metodoa hautatzeko tekla-sakatzeak"
 
 #: dselect/helpmsgs.cc:191
-#, fuzzy
 msgid ""
 "Motion keys: Next/Previous, Top/End, Up/Down, Backwards/Forwards:\n"
 "  j, Down-arrow         k, Up-arrow             move highlight\n"
@@ -742,8 +739,7 @@ msgstr ""
 "(Mugitzeko tekla hauek paketeen zerrendako pantailako berak dira.)\n"
 "\n"
 "Irten:\n"
-" Itzulera-tekla, Sartu  hautatu metodo hau eta joan bere konf. "
-"elkarrizketara\n"
+" Enter, Sartu  hautatu metodo hau eta joan bere konf. elkarrizketara\n"
 " x, X                   irten, instalazio-metodoa aldatu edo konfiguratu "
 "gabe\n"
 "\n"
@@ -1057,9 +1053,8 @@ msgid "[none]"
 msgstr "[bat ere ez]"
 
 #: dselect/methlist.cc:191
-#, fuzzy
 msgid "Explanation"
-msgstr "honen azalpena: "
+msgstr "Azalpena"
 
 #: dselect/methlist.cc:200
 msgid "No explanation available."
@@ -1393,7 +1388,7 @@ msgstr "honen aurremendekoa da:"
 
 #: dselect/pkgdisplay.cc:75
 msgid "breaks with"
-msgstr ""
+msgstr "honekin hondatzen da: "
 
 #: dselect/pkgdisplay.cc:76
 msgid "conflicts with"
@@ -1608,24 +1603,20 @@ msgstr ""
 "desberdinetako paketeak markatzeko."
 
 #: dselect/pkginfo.cc:95
-#, fuzzy
 msgid "Interrelationships"
 msgstr "interrelazioak"
 
 #: dselect/pkginfo.cc:112
-#, fuzzy
 msgid "No description available."
-msgstr "azalpen erabilgarririk ez."
+msgstr "Ez dago azalpen erabilgarririk."
 
 #: dselect/pkginfo.cc:130
-#, fuzzy
 msgid "Installed control file information"
-msgstr "instalatutako kontrol-informazioa: "
+msgstr "instalatutako kontrol fitxategiaren informazioa"
 
 #: dselect/pkginfo.cc:146
-#, fuzzy
 msgid "Available control file information"
-msgstr "kontrol-fitxategiaren informazioaren bertsio erabilgarria"
+msgstr "Kontrol fitxategiaren informazio erabilgarria"
 
 #: dselect/pkglist.cc:123 dselect/pkglist.cc:124
 msgid "<null>"
@@ -1724,18 +1715,3 @@ msgstr "Inst. berts."
 #: dselect/pkgtop.cc:295
 msgid "Avail.ver"
 msgstr "Berts. erabilg."
-
-#~ msgid "interrelationships affecting "
-#~ msgstr "hauen arteko interrelazioak: "
-
-#~ msgid "description of "
-#~ msgstr "honen azalpena: "
-
-#~ msgid "description"
-#~ msgstr "azalpena"
-
-#~ msgid "currently installed control info"
-#~ msgstr "instalatutako kontrol-informazioa"
-
-#~ msgid "available version of control info for "
-#~ msgstr "kontrol-informazioaren bertsio erabilgarria: "
