--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+dpkg (1.14.16.6) UNRELEASED; urgency=low
+
+  * Let dpkg-gensymbols skip directories which are just symlinks when scanning
+    the package build dir.
+
+ -- Raphael Hertzog <hertzog@debian.org>  Sat, 26 Jan 2008 19:20:40 +0100
+
 dpkg (1.14.16.5) unstable; urgency=low
 
   * Fix dpkg-gensymbols handling of #include so that one can include multiple
