--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-24  Raphael Hertzog  <hertzog@debian.org>
+
+	* configure.ac: Release 1.14.16.6.
+
 2008-01-26  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/dpkg-gensymbols: Don't scan directories which are
