dpkg-gensymbols: be more explicit in warning about new/lost libraries
* scripts/Dpkg/Shlibs/SymbolFile.pm: Replace has_new_libs(),
has_lost_libs(), has_new_symbols() and has_lost_symbols() by
corresponding get_* functions.
* scripts/dpkg-gensymbsols.pl: Display list of new/lost libs. Also
display list of lost symbols when wildcards symbols have been
used.
* scripts/t/200_Dpkg_Shlibs.t: Adjust test suite to API change.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2008-01-27  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Shlibs/SymbolFile.pm: Replace has_new_libs(),
+	has_lost_libs(), has_new_symbols() and has_lost_symbols() by
+	corresponding get_* functions.
+	* scripts/dpkg-gensymbsols.pl: Display list of new/lost libs. Also
+	display list of lost symbols when wildcards symbols have been
+	used.
+	* scripts/t/200_Dpkg_Shlibs.t: Adjust test suite to API change.
+
 2008-01-25  Andreas Påhlsson  <andreas.pahlsson@xcerion.com>
 
 	* utils/start-stop-daemon.c (tsub): Remove function.
