Avoid fuzzy translations on a cosmetic string change.

--- a/scripts/po/de.po
+++ b/scripts/po/de.po
@@ -923,13 +923,13 @@ msgstr "einige Symbole sind in der Symbol-Datei verschwunden."
 
 #: scripts/dpkg-gensymbols.pl:235
 #, perl-format
-msgid "%s doesn't match completely %s\n"
-msgstr "%s passt nicht komplett auf %s\n"
+msgid "%s doesn't match completely %s"
+msgstr "%s passt nicht komplett auf %s"
 
 #: scripts/dpkg-gensymbols.pl:238
 #, perl-format
-msgid "no debian/symbols file used as basis for generating %s\n"
-msgstr "keine debian/symbols-Datei als Basis zur Erzeugung von %s verwendet\n"
+msgid "no debian/symbols file used as basis for generating %s"
+msgstr "keine debian/symbols-Datei als Basis zur Erzeugung von %s verwendet"
 
 #: scripts/dpkg-parsechangelog.pl:21
 msgid ""
