--- a/scripts/po/fr.po
+++ b/scripts/po/fr.po
@@ -977,13 +977,13 @@ msgstr "certains symboles ont disparu du fichier des symboles."
 
 #: scripts/dpkg-gensymbols.pl:235
 #, perl-format
-msgid "%s doesn't match completely %s\n"
-msgstr "%s ne correspond pas complètement à %s\n"
+msgid "%s doesn't match completely %s"
+msgstr "%s ne correspond pas complètement à %s"
 
 #: scripts/dpkg-gensymbols.pl:238
 #, perl-format
-msgid "no debian/symbols file used as basis for generating %s\n"
-msgstr "pas de fichier debian/symbols utilisé comme base pour générer %s\n"
+msgid "no debian/symbols file used as basis for generating %s"
+msgstr "pas de fichier debian/symbols utilisé comme base pour générer %s"
 
 #: scripts/dpkg-parsechangelog.pl:21
 msgid ""
