--- a/scripts/po/ru.po
+++ b/scripts/po/ru.po
@@ -934,14 +934,14 @@ msgstr "некоторые символы исчезли из файла symbols
 
 #: scripts/dpkg-gensymbols.pl:235
 #, perl-format
-msgid "%s doesn't match completely %s\n"
-msgstr "%s совпадает не полностью с %s\n"
+msgid "%s doesn't match completely %s"
+msgstr "%s совпадает не полностью с %s"
 
 #: scripts/dpkg-gensymbols.pl:238
 #, perl-format
-msgid "no debian/symbols file used as basis for generating %s\n"
+msgid "no debian/symbols file used as basis for generating %s"
 msgstr ""
-"файл debian/symbols не используется в качестве основы для генерации %s\n"
+"файл debian/symbols не используется в качестве основы для генерации %s"
 
 #: scripts/dpkg-parsechangelog.pl:21
 msgid ""
