--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-28  Raphael Hertzog  <hertzog@debian.org>
+
+	* *.po: Avoid fuzzy translations on a cosmetic string change.
+
 2008-01-04  Peter Karlsson  <peterk@debian.org>
 
 	* sv.po: Updated to 482t1u.
