Deprecate support of substvars in dpkg-source and dpkg-genchanges

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-01-27  Raphael Hertzog  <hertzog@debian.org>
 
+	* README.feature-removal-schedule: Deprecate support of substvars
+	in dpkg-source and dpkg-genchanges.
+
+2008-01-27  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/Dpkg/Shlibs/SymbolFile.pm: Replace has_new_libs(),
 	has_lost_libs(), has_new_symbols() and has_lost_symbols() by
 	corresponding get_* functions.
