Custom changelog parsers must be updated for lenny+1

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
 	* README.feature-removal-schedule: Deprecate support of substvars
 	in dpkg-source and dpkg-genchanges.
+	* README.feature-removal-schedule, README.api: Deprecate support
+	of custom changelog parsers that understand only the -v option.
 
 2008-01-27  Raphael Hertzog  <hertzog@debian.org>
 
