Deprecate support of PGP

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 	in dpkg-source and dpkg-genchanges.
 	* README.feature-removal-schedule, README.api: Deprecate support
 	of custom changelog parsers that understand only the -v option.
+	* README.feature-removal-schedule: Deprecate support of PGP.
 
 2008-01-27  Raphael Hertzog  <hertzog@debian.org>
 
