--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2008-01-28  Guillem Jover  <guillem@debian.org>
+
+	* getopt: Rename to ...
+	* libcompat: ... this.
+	* configure.ac (AC_CONFIG_FILES): Likewise.
+	* Makefile.am (SUBDIRS): Likewise.
+	* utils/Makefile.am (INCLUDES): Likewise.
+	(start_stop_daemon_LDADD): Use '../libcompat/libcompat.a' instead of
+	'../getopt/libopt.a'.
+	* libcompat/Makefile.am (noinst_LIBRARIES): Rename 'libopt.a' to
+	'libcompat.a'.
+	(libopt_a_SOURCES): Rename to ...
+	(libcompat_a_SOURCES): ... this.
+
 2008-01-27  Raphael Hertzog  <hertzog@debian.org>
 
 	* README.feature-removal-schedule: Deprecate support of substvars
