dpkg-genchanges: always list all binary packages in the Description field

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,10 @@ dpkg (1.14.17) UNRELEASED; urgency=low
     libraries.
   * Add -R option to dpkg-buildpackage so that one can replace the usual
     "debian/rules" by something else. Closes: #355654
+  * Always list all binary packages in the Description: field of .changes
+    files. It's nice for reviewers and mentors.debian.net was using this field
+    on source only uploads to display short description of what the package is
+    about.
 
   [ Updated manpages translations ]
   * German (Helge Kreutzmann).
