--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-31  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/dpkg-genchanges.pl: Always list all binary packages in
+	the Description field of generated .changes files.
+
 2008-01-30  Justin Pryzby  <jpryzby+d@quoininc.com>
 
 	* utils/start-stop-daemon.c (do_help): Clarify --name and --user
