libcompat: Remove unused files

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2008-02-03  Guillem Jover  <guillem@debian.org>
+
+	* libcompat/Makefile.am (libcompat_a_SOURCES): Remove closeout.c,
+	closeout.h, error.h, long-options.c and long-options.h.
+	* libcompat/closeout.c: Remove unused file.
+	* libcompat/closeout.h: Likewise.
+	* libcompat/error.h: Likewise.
+	* libcompat/long-options.c: Likewise.
+	* libcompat/long-options.h: Likewise.
+
 2008-02-03  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/dpkg-shlibdeps.pl: Handle better the case when the
