dpkg-shlibdeps: some accuracy improvements for warnings about unused libraries
* scripts/dpkg-shlibdeps.pl: Handle better the case when the
library found has a different soname than the one used to look up
the library file. Properly affect symbols coming from it to the
soname wanted by the binary, thus avoiding invalid warnings about
unused library.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-02-03  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/dpkg-shlibdeps.pl: Handle better the case when the
+	library found has a different soname than the one used to look up
+	the library file. Properly affect symbols coming from it to the
+	soname wanted by the binary, thus avoiding invalid warnings about
+	unused library.
+
 2008-01-31  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/dpkg-genchanges.pl: Always list all binary packages in
