libcompat: Do not pass unused arguments to the compiler

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-02-04  Guillem Jover  <guillem@debian.org>
+
+	* libcompat/Makefile.am (localedir): Remove unused variable.
+	(INCLUDES): Do not pass -DLOCALEDIR nor -I$(top_srcdir)/lib.
+
 2008-02-03  Guillem Jover  <guillem@debian.org>
 
 	* m4/funcs.m4 (DPKG_CHECK_COMPAT_FUNCS): New macro.
