Updated Korean translation
	* po/ko.po: Update to 927t.

--- a/debian/changelog
+++ b/debian/changelog
@@ -36,6 +36,9 @@ dpkg (1.14.17) UNRELEASED; urgency=low
     satisfied during -S. Closes: #445552
   * Add a missing space in the German scripts translation. Closes: #463398 
 
+  [ Updated dpkg translations ]
+  * Korean (Changwoo Ryu).
+
   [ Updated manpages translations ]
   * German (Helge Kreutzmann).
 
@@ -43,7 +46,7 @@ dpkg (1.14.17) UNRELEASED; urgency=low
   * German (Helge Kreutzmann).
   * Swedish (Peter Karlsson).
 
- -- Frank Lichtenheld <djpig@debian.org>  Wed, 30 Jan 2008 22:50:05 +0100
+ -- Changwoo Ryu <cwryu@debian.org>  Mon, 04 Feb 2008 16:56:16 +0900
 
 dpkg (1.14.16.6) unstable; urgency=medium
 
