--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-04  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Update to 927t.
+
 2008-01-21  Guillem Jover  <guillem@debian.org>
 
 	* de.po, eu.po, fr.po, gl.po, nb.po, ru.po, sv.po: Update to 928t.
