dpkg-gencontrol: Do not output the Homepage field on udeb

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-07  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-gencontrol.pl: Do not output the Homepage field on udeb.
+
 2008-02-04  Guillem Jover  <guillem@debian.org>
 
 	* libcompat/Makefile.am (localedir): Remove unused variable.
