Updated Romanian translations for dpkg and dselect
Romanian dpkg and dselect translations updated to 100%.
Some improvements in divert related translations in dpkg.

--- a/debian/changelog
+++ b/debian/changelog
@@ -35,10 +35,11 @@ dpkg (1.14.17) UNRELEASED; urgency=low
   [ Frank Lichtenheld ]
   * Add a warning in dpkg-buildpackage if the build-dependencies are not
     satisfied during -S. Closes: #445552
-  * Add a missing space in the German scripts translation. Closes: #463398 
+  * Add a missing space in the German scripts translation. Closes: #463398
 
   [ Updated dpkg translations ]
   * Korean (Changwoo Ryu).
+  * Romanian (Eddy Petrișor).
 
   [ Updated manpages translations ]
   * German (Helge Kreutzmann).
@@ -47,7 +48,10 @@ dpkg (1.14.17) UNRELEASED; urgency=low
   * German (Helge Kreutzmann).
   * Swedish (Peter Karlsson).
 
- -- Changwoo Ryu <cwryu@debian.org>  Mon, 04 Feb 2008 16:56:16 +0900
+  [ Updated dselect translations ]
+  * Romanian (Eddy Petrișor).
+
+ -- Eddy Petrișor <eddy.petrisor@gmail.com>  Sat, 09 Feb 2008 13:22:38 +0200
 
 dpkg (1.14.16.6) unstable; urgency=medium
 
