--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-09  Eddy Petrișor <eddy.petrisor@gmail.com>
+
+	* ro.po: 285t
+
 2008-01-25  Piarres Beobide  <pi@beobide.net>
 
 	* eu.po: 286t
