--- a/dselect/po/ro.po
+++ b/dselect/po/ro.po
@@ -12,21 +12,20 @@
 # Copyright (C) 2005 THE PACKAGE'S COPYRIGHT HOLDER
 #
 # Rușeț Zeno <rzeno@cwazy.co.uk>, 2005.
-# Eddy Petrișor <eddy.petrisor@gmail.com>, 2005, 2006, 2007.
+# Eddy Petrișor <eddy.petrisor@gmail.com>, 2005, 2006, 2007, 2008.
 # Sorin Batariuc <sorin@bonbon.net>, 2005.
 msgid ""
 msgstr ""
 "Project-Id-Version: ro\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-01-07 11:58+0200\n"
-"PO-Revision-Date: 2007-06-12 12:39+0300\n"
+"PO-Revision-Date: 2008-02-09 13:28+0200\n"
 "Last-Translator: Eddy Petrișor <eddy.petrisor@gmail.com>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms:  nplurals=3; plural=n==1 ? 0 : (n==0 || (n%100 > 0 && n%100 < "
-"20)) ? 1 : 2;\n"
+"Plural-Forms:  nplurals=3; plural=n==1 ? 0 : (n==0 || (n%100 > 0 && n%100 < 20)) ? 1 : 2;\n"
 "X-Generator: KBabel 1.11.4\n"
 
 #  spațiile sunt necesare!!
@@ -315,7 +314,6 @@ msgid "Keystrokes"
 msgstr "Combinații taste"
 
 #: dselect/helpmsgs.cc:25
-#, fuzzy
 msgid ""
 "Motion keys: Next/Previous, Top/End, Up/Down, Backwards/Forwards:\n"
 "  j, Down-arrow         k, Up-arrow             move highlight\n"
@@ -347,7 +345,7 @@ msgid ""
 "   D     set all to Directly requested state  n, \\  repeat last search\n"
 msgstr ""
 "Taste de deplasare: Următor/Anterior, Cap/Coadă, Sus/Jos, Înainte/Înapoi:\n"
-"  Săgeată-jos, j        Săgeată-sus, k          mută cursorul\n"
+"  j, Săgeată-jos        k, Săgeată-sus          mută cursorul\n"
 "  N, Page-down, Space   P, Page-up, Backspace   derulează lista cu 1 pagină\n"
 "  ^n                    ^p                      derulează lista cu 1 linie\n"
 "  t, Home               e, End                  sari la capul/coada listei\n"
@@ -732,7 +730,6 @@ msgid "Keystrokes for method selection"
 msgstr "Combinații de taste pentru selectarea metodei"
 
 #: dselect/helpmsgs.cc:191
-#, fuzzy
 msgid ""
 "Motion keys: Next/Previous, Top/End, Up/Down, Backwards/Forwards:\n"
 "  j, Down-arrow         k, Up-arrow             move highlight\n"
@@ -758,7 +755,7 @@ msgid ""
 msgstr ""
 "Taste de deplasare: Următor/Anterior, Început/Sfârșit, Sus/Jos, Înapoi/"
 "Înainte:\n"
-"  n, Down-arrow         p, Up-arrow             mută selecția\n"
+"  j, Down-arrow         k, Up-arrow             mută selecția\n"
 "  N, Page-down, Space   P, Page-up, Backspace   derulează lista cu 1 pagină\n"
 "  ^n                    ^p                      derulează lista cu 1 linie\n"
 "  t, Home               e, End                  sari la începutul/sfârșitul "
@@ -1134,8 +1131,7 @@ msgstr "nu pot aștepta după %.250s"
 #: dselect/method.cc:175
 #, c-format
 msgid "got wrong child's status - asked for %ld, got %ld"
-msgstr ""
-"am recepționat o stare greșită a procesului-fiu - cerut %ld, recepționat %ld"
+msgstr "am recepționat o stare greșită a procesului-fiu - cerut %ld, recepționat %ld"
 
 #: dselect/method.cc:186
 #, c-format
@@ -1763,3 +1759,4 @@ msgstr "Ver.disp"
 
 #~ msgid "available version of control info for "
 #~ msgstr "versiune disponibilă a informației de control pentru"
+
