--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-09  Eddy Petrișor <eddy.petrisor@gmail.com>
+
+	* ro.po: Update to 927t.
+
 2008-02-04  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Update to 927t.
