--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-02-17  Frank Lichtenheld  <djpig@debian.org>
+	    Matthias Klose  <doko@cs.tu-berlin.de>
+
+	* scripts/dpkg-buildpackage.pl: Set a set of environment variables
+	for setting compiler and linker options, unless already set in the
+	environment. See https://wiki.ubuntu.com/DistCompilerFlags for
+	background information.
+
 2008-02-13  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Version.pm: Import Dpkg::Gettext since we use _g().
