--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -3,6 +3,12 @@
 	* po/dpkg-man.pot: Regenerated.
 	* po/*.po: Merged with dpkg-man.pot.
 
+2008-02-17  Frank Lichtenheld  <djpig@debian.org>
+	    Matthias Klose  <doko@cs.tu-berlin.de>
+
+	* man/dpkg-buildpackage.1: Document the new
+	behaviour for build related environment variables.
+
 2008-02-17  Zack Weinberg  <zackw@panix.com>
 
 	* deb-shlibs.5: Make this manual page a bit
