Dpkg::Version: Import Dpkg::Gettext
* scripts/Dpkg/Version.pm: Import Dpkg::Gettext since check_version() uses
_g().

--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,8 @@ dpkg (1.14.17) UNRELEASED; urgency=low
     about.
   * Handle the case when the library has a different SONAME than the one used
     to find it. Closes: #462413
+  * Fix Dpkg::Version to import _g() from Dpkg::Gettext. Thanks to Adam Heath
+    for spotting this. Closes: #465651
 
   [ Frank Lichtenheld ]
   * Add a warning in dpkg-buildpackage if the build-dependencies are not
