--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-13  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Version.pm: Import Dpkg::Gettext since we use _g().
+
 2008-02-07  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-gencontrol.pl: Do not output the Homepage field on udeb.
