Continued work on German scripts translation

--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-22  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* de.po: Updated to 335t0f148u.
+
 2008-01-28  Raphael Hertzog  <hertzog@debian.org>
 
 	* *.po: Avoid fuzzy translations on a cosmetic string change.
