--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,8 @@ dpkg (1.14.17) UNRELEASED; urgency=low
     Christian Perrier with their permission.
   * Use functions from libcompat when those are not provided by the system.
   * Change dpkg-gencontrol to not output the Homapage field on udeb.
+  * Reintroduce 'no-debsig' back in dpkg.cfg to avoid failing to install any
+    package when debsig-verify is installed. Closes: #311843
 
   [ Raphael Hertzog ]
   * Add a warning displayed by dpkg-genchanges if the current version is
