dpkg.cfg: Reintroduce 'no-debsig' option
This avoids failing to install any package when debsig-verify is installed,
as distributions do not use embedded signatures in packages. Closes: #311843

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ dpkg (1.13.26) UNRELEASED; urgency=low
     to a directory where the existing symlink on-disk points to the
     same place. Closes: #377682
     Thanks to Ian Jackson.
+  * Reintroduce 'no-debsig' back in dpkg.cfg to avoid failing to install any
+    package when debsig-verify is installed. Closes: #311843
 
   [ Updated dpkg translations ]
   * Romanian (Eddy Petrișor)
