deb-shlibs.5: Be a little more elaborate and helpful
[Committed the original patch with some formatting changes
-- Frank Lichtenheld]

--- a/debian/changelog
+++ b/debian/changelog
@@ -40,6 +40,7 @@ dpkg (1.14.17) UNRELEASED; urgency=low
   * Add a warning in dpkg-buildpackage if the build-dependencies are not
     satisfied during -S. Closes: #445552
   * Add a missing space in the German scripts translation. Closes: #463398
+  * Add improved deb-shlibs.5 manual page by Zack Weinberg. Closes: #466135
 
   [ Updated dpkg translations ]
   * Korean (Changwoo Ryu).
