--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2008-02-17  Zack Weinberg  <zackw@panix.com>
+
+	* deb-shlibs.5: Make this manual page a bit
+	more elaborate and helpful.
+
 2008-01-22  Peter Karlsson  <peterk@debian.org>
 
 	* po/sv.po: Updated to 1422t.
