--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2008-02-17  Frank Lichtenheld  <djpig@debian.org>
+
+	* po/dpkg-man.pot: Regenerated.
+	* po/*.po: Merged with dpkg-man.pot.
+
 2008-02-17  Zack Weinberg  <zackw@panix.com>
 
 	* deb-shlibs.5: Make this manual page a bit
