dpkg-architecture.1: Document needed data files

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,5 +1,8 @@
 2008-02-17  Frank Lichtenheld  <djpig@debian.org>
 
+	* dpkg-architecture.1: Document the files
+	needed by dpkg-architecture.
+
 	* po/dpkg-man.pot: Regenerated.
 	* po/*.po: Merged with dpkg-man.pot.
 
