--- a/man/dpkg-architecture.1
+++ b/man/dpkg-architecture.1
@@ -265,6 +265,20 @@ dpkg\-architecture \-ilinux\-any
 .IP
 dpkg\-architecture \-ai386 \-ilinux\-any
 .
+.SH FILES
+All these files have to be present for \fBdpkg-architecture\fP to
+work.
+.TP
+.I /usr/share/dpkg/cputable
+Table of known CPU names and mapping to their GNU name.
+.TP
+.I /usr/share/dpkg/ostable
+Table of known operating system names and mapping to their GNU name.
+.TP
+.I /usr/share/dpkg/triplettable
+Mapping between Debian architecture triplets and Debian architecture
+names.
+.
 .SH "SEE ALSO"
 .BR dpkg\-buildpackage (1),
 .BR dpkg\-cross (1).
