Allow overriding $pkgdatadir in Dpkg
* scripts/Dpkg.pm: Allow overriding $pkgdatadir
with $ENV{DPKG_DATADIR}.
* scripts/Makefile.am (check): Use DPKG_DATADIR.
* debian/rules: Remove hack to copy data files
to build directory.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,13 @@
 2008-02-17  Frank Lichtenheld  <djpig@debian.org>
+
+	* scripts/Dpkg.pm: Allow overriding $pkgdatadir
+	with $ENV{DPKG_DATADIR}.
+	* scripts/Makefile.am (check): Use DPKG_DATADIR.
+	* debian/rules: Remove hack to copy data files
+	to build directory.
+
+
+2008-02-17  Frank Lichtenheld  <djpig@debian.org>
 	    Matthias Klose  <doko@cs.tu-berlin.de>
 
 	* scripts/dpkg-buildpackage.pl: Set a set of environment variables
