--- a/man/dpkg-architecture.1
+++ b/man/dpkg-architecture.1
@@ -267,7 +267,8 @@ dpkg\-architecture \-ai386 \-ilinux\-any
 .
 .SH FILES
 All these files have to be present for \fBdpkg-architecture\fP to
-work.
+work. Their location can be overriden at runtime with the environment
+variable DPKG_DATADIR.
 .TP
 .I /usr/share/dpkg/cputable
 Table of known CPU names and mapping to their GNU name.
